# frontend-gateway

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.config/: nextest.toml
src/: env.rs  main.rs
src/app/: mod.rs
src/app/rewrite_static/: builder.rs  config.rs  context.rs  middleware.rs  mod.rs
src/app/start_router/: builder.rs  mod.rs  router.rs
src/config/: app.rs  apps.rs  endpoint.rs  mod.rs  rewrite.rs  upstream.rs
tests/: single_server.rs
