[package]
name = "frontend-gateway"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials" }
gateway = { tag = "0.8.4", features = ["cache"], git = "https://github.com/majksa-dev/rust-gateway"}
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
envy = "0.4.2"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
rand = "0.8.5"
slab = "0.4.9"
regex = "1.10.6"
async-trait = "0.1.80"
structopt = "0.3.26"
redis = "0.26.1"
http = "1.1.0"
tokio = { version = "1.39", features = ["full"] }
bb8-redis = "0.16.0"
anyhow = "1.0.86"
url = "2.5.2"

[dev-dependencies]
testing-utils = { tag = "0.1.5", git = "https://github.com/majksa-dev/rust-testing-utils" }
pretty_assertions = "1.4.0"
wiremock = "0.6.1"
